--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,12 +1,34 @@
 .login-form {
-    max-width: 300px;
-  }
-  .login-form-forgot {
-    float: right;
-  }
-  .ant-col-rtl .login-form-forgot {
-    float: left;
-  }
-  .login-form-button {
-    width: 100%;
-  }
+  max-width: 500px;
+  padding: 24px;
+  border-radius: 24px;
+}
+.login-form-forgot {
+  float: right;
+  color: #7e57c2;
+}
+.ant-col-rtl .login-form-forgot {
+  float: left;
+}
+/* .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: #7e57c2 !important;
+    border-color: #7e57c2 !important;
+    
+  } */
+
+.ant-checkbox .ant-checkbox-inner {
+  border-color: #7e57c2 !important;
+}
+
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #7e57c2 !important;
+  border-color: #7e57c2 !important;
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #7e57c2 !important;
+}
+.ant-checkbox-indeterminate .ant-checkbox-inner::after {
+  background-color: #7e57c2;
+}
