--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,17 @@ body {
   box-shadow: 1px;
   cursor: pointer;
 }
+
+:where(.css-dev-only-do-not-override-1me4733).ant-btn-primary {
+  color: #fff;
+  background-color: var(--primary-color);
+  box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
+}
+:where(.css-dev-only-do-not-override-1me4733).ant-btn-primary:not(:disabled):hover {
+  color: #fff;
+  background-color:var(--primary-hover-color);
+}
+:where(.css-dev-only-do-not-override-1me4733).ant-input-search .ant-input:hover, :where(.css-dev-only-do-not-override-1me4733).ant-input-search .ant-input:focus {
+  border-color: #D4B9FF;
+};
+
