--- a/src/components/base/IdeaCard/IdeaCard.css
+++ b/src/components/base/IdeaCard/IdeaCard.css
@@ -1,12 +1,14 @@
 .idea-card{
-    width: 400px;
+    width: 300px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    margin-bottom: 32px;
     border: 1px solid var(--primary-color);
     padding: 16px;
     border-radius: 8px;
     font-family: inherit;
+   
+
 }
 .idea-card__author-avatar{
     width: 50px;
@@ -32,9 +34,19 @@
 .idea-card__content{
     font-size: 14px;
     margin: 4px 0px;
+    line-height: 1.6rem;
+    height: 4.8rem;
+    overflow: hidden;
+    /* display: block; */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    inline-size: 180px;
+    overflow-wrap: break-word;
+    
 }
 .idea-card__actionBtn {
-    width: 100px;
+    width: 80px;
     height: 30px;
     margin-right: 8px;
     background-color: var(--primary-color);
