--- a/src/components/section/HeaderSection/headerSection.css
+++ b/src/components/section/HeaderSection/headerSection.css
@@ -1,74 +1,61 @@
-.header{
+.header {
     height: 60px;
-    /* background-color: #9543ff; */
     display: flex;
     font-family: inherit;
-    /* color: var(--white-color); */
-    background-color: #FFF;
+    background-color: var(--bg-color);
     align-items: center;
     justify-content: center;
   
+
 }
-.header__logo-link{
+
+.header__logo-link {
     height: 60px;
 }
-.header__logo{
+
+.header__logo {
     width: auto;
     height: 60px;
 }
-.header__menu{
+
+.header__menu {
     flex: 1;
     font-family: inherit;
     background-color: transparent;
-    /* color: inherit; */
+    font-size: 16px;
+    font-weight: 400;
 
 }
-.header-section__search{
-    
-}
-:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-item-selected, :where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-submenu-selected {
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-item-selected,
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-submenu-selected {
     color: var(--primary-color);
     background-color: transparent;
 }
-:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-item-selected::after, :where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-submenu-selected::after {
+
+/* Thanh ben duoi */
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-item-selected::after,
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-submenu-selected::after {
     border-bottom-width: 2px;
     border-bottom-color: var(--primary-color);
 }
-:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-item:hover:after, :where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal >.ant-menu-submenu-selected::after {
+
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-item:hover:after,
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light.ant-menu-horizontal>.ant-menu-submenu-selected::after {
     border-bottom-width: 2px;
     border-bottom-color: var(--primary-color);
 }
-:where(.css-dev-only-do-not-override-1me4733).ant-input-search >.ant-input-group >.ant-input-group-addon:last-child .ant-input-search-button:not(.ant-btn-primary):hover {
-    color: var(--primary-hover-color)
+
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light .ant-menu-item:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected), :where(.css-dev-only-do-not-override-1me4733).ant-menu-light .ant-menu-submenu-title:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected) {
+    color: #FFF;
+} 
+:where(.css-dev-only-do-not-override-1me4733).ant-menu-light {
+    color: #FFF;
 }
-:where(.css-dev-only-do-not-override-1me4733).ant-btn:not(:disabled):focus-visible {
-    outline: 4px solid #D4B9FF;
-    outline-offset: 1px;
-    transition: outline-offset 0s,outline 0s;
-}
-:where(.css-dev-only-do-not-override-1me4733).ant-btn-default:not(:disabled):hover {
-    border-color:#D4B9FF;
-}
-/* .ant-menu-title-content{
-    color: var(--primary-color);
-}
-.ant-menu-title-content:hover{
-    color: #000;
-}
-.ant-menu-title-content:active{
-    color: #000;
-} */
-/* :where(.css-dev-only-do-not-override-1me4733).ant-menu-light .ant-menu-item-selected
-{
-    color: #000;
-} */
-/* :where(.css-dev-only-do-not-override-1me4733).ant-menu .ant-menu-title-content {
-    color: var(--black-color);
-} */
-.header-section__btn{
+
+.header-section__btn {
     width: 75px;
     height: 35px;
     margin-right: 16px;
     font-size: 16px;
-   
+
 }
