--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,6 +1,25 @@
+
+.login-title{
+  color: var(--primary-color);
+  font-family: inherit;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 16px 0px;
+}
+.login-name{
+  font-size: 54px;
+  font-weight: 700;
+}
+.login-slogan{
+  font-size: 24px;
+  font-family: 500;
+}
 .login-form-forgot {
   float: right;
-  color: #7e57c2;
+  color: var(--primary-color);
 }
 .ant-col-rtl .login-form-forgot {
   float: left;
@@ -22,3 +41,50 @@
 .ant-checkbox-indeterminate .ant-checkbox-inner::after {
   background-color: #7e57c2;
 }
+
+
+.login-intro{
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  color: var(--white-color);
+  margin: 24px;
+}
+.login-intro__title{
+  font-size: 44px;
+  margin-bottom: 36px;
+}
+.login-intro__slogan{
+  font-size: 21px;
+  margin-bottom: 36px;
+}
+.animated{
+  -webkit-animation-duration: .7s;
+  animation-duration: .7s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+.login-intro__contact-email{
+  margin-bottom: 36px;
+}
+
+.login-intro__social-media{
+  display: flex;
+}
+.login-intro__social-media-item{
+  margin-right: 16px;
+  color: var(--black-color);
+}
+.login-intro__social-media-item:hover{
+  background-color: var(--primary-hover-color);
+  cursor: pointer;
+  border-radius: 8px;
+  color: #FFF;
+}
+.login-intro__social-media-link:hover{
+  color: #FFF;
+}
+.login-intro__social-media-link{
+  color: var(--black-color);
+}
+
