--- a/src/components/base/CustomTable/customTable.css
+++ b/src/components/base/CustomTable/customTable.css
@@ -4,3 +4,7 @@
 :where(.css-dev-only-do-not-override-1me4733) a:hover {
     color:var(--primary-hover-color);
 }
+.deleteBtn{
+    width: 80px;
+    height: 35px;
+}
