--- a/src/components/section/ExploreIdeaSection/exploreIdeaSection.css
+++ b/src/components/section/ExploreIdeaSection/exploreIdeaSection.css
@@ -1,4 +1,9 @@
 
+.exploreIdea__empty{
+    font-size: 32px;
+    color: var(--white-color);
+
+}
 /* Tablet */
 /* @media (min-width: 740px) and (max-width : 1023px) */
 @media (min-width: 46.25em) and (max-width : 63.9375em)
