--- a/src/components/section/HeaderSection/headerSection.css
+++ b/src/components/section/HeaderSection/headerSection.css
@@ -10,12 +10,13 @@
 }
 
 .header__logo-link {
-    height: 60px;
+    height: 70px;
 }
 
 .header__logo {
     width: auto;
-    height: 60px;
+    height: 100%;
+    min-height: 60px;
 }
 
 .header__menu {
