--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -27,6 +27,10 @@
   
 }
 
+.profile__form{
+  display: flex;
+  flex-direction: column;
+}
 .profile-detail__value {
   width: 300px;
   height: max-content;
@@ -70,8 +74,10 @@ margin-bottom: 16px;
 height: 45px;
 }
 
-
-
+/* MODAL */
+.modal__title{
+  text-align: center;
+}
 /* Tablet */
 /* @media (min-width: 740px) and (max-width : 1023px) */
 @media (min-width: 46.25em) and (max-width : 63.9375em)
